Fix directory error

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
 <body>
 
-    <table class="tg" style="width:600px;">
+    <table class="tg">
         <thead>
             <tr>
-            <th class="tg-c3ow">
+            <th class="tg-c3ow" style="width:400px;">
                 <div id="component1" name="com1"></div>
             </th>
-            <th class="tg-c3ow">
+            <th class="tg-c3ow" style="width:400px;">
                 <div id="component2"></div>
             </th>
             </tr>
@@ -61,7 +61,7 @@
             }
         }
     </script>
-    <script src='./src/ColorStore.js'></script>
+    <script src='./store/ColorStore.js'></script>
     <script src='./component/Component1.js'></script>
     <script src='./component/Component2.js'></script>
     <script src='./component/Component3.js'></script>
